Overflow width fix

--- a/style/components/footer.css
+++ b/style/components/footer.css
@@ -1,6 +1,7 @@
 .footer-content{
     height: 300px;
     position: relative;
+    overflow: hidden;
 }
 .bubble::before {
     content: '';
